review_tool/test-cases/bad/bad-var-usage.js
var pageType = dataLayer[0].shoptet.pageType;
var projectId = dataLayer[0].shoptet.projectId;
var userId = dataLayer[0].shoptet.customer.guid;

for(var i = 0; i < 10; i++) {
  var item = items[i];
}
